--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.379.0",
     "next": "^14.2.3",
+    "pocketbase": "^0.26.6",
     "react": "^18",
     "react-dom": "^18",
     "replicate": "^0.30.0",
